jinja template file added and GUI adjustments

--- a/namaste/namaste_app/templates/base.html
+++ b/namaste/namaste_app/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Namaste - {% block title %}{% endblock %}</title>
+    <title>NAMASTE - {% block title %}{% endblock %}</title>
 	<link rel="shortcut icon" href="/static/img/namaste/favicon-32x32.png" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/static/img/namaste/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/static/img/namaste/android-chrome-192x192.png">
@@ -66,15 +66,6 @@
 					<li class="nav-item">
 						<a class="nav-link" href="{% url 'services' %}">SERVICIOS</a>					
 					</li>
-					<!-- <li class="nav-item">
-						<a class="nav-link" href="pricing.html">Pricing</a>					
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="gallery.html">Gallery</a>					
-					</li>					
-					<li class="nav-item">
-						<a class="nav-link" href="blog.html">Blog</a>					
-					</li> -->
 					<li class="nav-item">
 						<a class="nav-link" href="{% url 'contact' %}">CONTACTO</a>					
 					</li>
