--- a/namaste/namaste_app/templates/about-us.html
+++ b/namaste/namaste_app/templates/about-us.html
@@ -1,87 +1,6 @@
+{% extends "base.html" %} {% block title %} ABOUT US {% endblock %}
 {% load widget_tweaks %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Namaste - About Us</title>
-	<link rel="shortcut icon" href="/static/img/favicon.png" type="image/x-icon">
-    <!-- Bootstrap Core CSS -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Animate CSS -->
-	<link href="/static/css/animate.css" rel="stylesheet">
-    <!-- Venobox CSS -->
-	<link href="/static/css/venobox.css" rel="stylesheet">
-	<!-- Owl Carousel CSS -->
-	<link href="/static/css/owl.carousel.min.css" rel="stylesheet">
-	<!--Chosen-->
-	<link href="/static/css/chosen.css" rel="stylesheet">
-	<!--Time picker-->
-	<link href="/static/css/bootstrap-timepicker.min.css" rel="stylesheet">
-	<!--Date picker-->
-	<link href="/static/css/datepicker.css" rel="stylesheet">
-	<!-- Font-awesome -->
-	<link rel="stylesheet" href="/static/fonts/font-awesome/css/font-awesome.min.css">
-	<!-- Google font-->
-	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,400i,500,600,700,800,900" rel="stylesheet">
-	<!-- Main CSS -->
-	<link href="/static/style.css" rel="stylesheet">
-	
-</head>
-
-<body>
-	<!--Preload-->
-	<div class="preloader">
-		<div class="preloader_image">
-			<div class="sk-double-bounce">
-				<div class="sk-child sk-double-bounce1"></div>
-				<div class="sk-child sk-double-bounce2"></div>
-			</div>
-		</div>
-	</div>
-	
-	<nav class="navbar navbar-expand-lg bg-white">
-		<div class="container">
-			<a class="navbar-brand" href="{% url 'home' %}">
-				<img src="/static/img/logo.png" alt="Logo">
-			</a>
-			<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#main-nav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="main-nav">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link" href="{% url 'home' %}">Home</a>					
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="{% url 'about' %}">About Us</a>					
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="{% url 'services' %}">Services</a>					
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="{% url 'contact' %}">Contact Us</a>					
-					</li>
-					<li class="nav-item btn-appointment">
-						<a class="nav-link" href="#" data-toggle="modal" data-target="#appointment">Appointment</a>					
-					</li>
-					<!-- <li class="nav-item">
-						<a class="nav-link" href="pricing.html">Pricing</a>					
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="gallery.html">Gallery</a>					
-					</li>					
-					<li class="nav-item">
-						<a class="nav-link" href="blog.html">Blog</a>					
-					</li> -->
-				</ul>
-			</div>
-		</div>
-	</nav>
-	<!-- end nav -->
+{% block content %}
 	
 	<section class="inner-page-banner" style="background-image:url(/static/img/banner/about-banner.jpg)">
 		<div class="page-banner-caption">
@@ -341,80 +260,6 @@
 		</div>
 	</section>
 	<!-- end appointment -->
-	
-	<footer id="footer">
-		<div class="footer-top">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-3">
-						<div class="footer-widget">
-							<h3>About Us</h3>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-							
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div class="footer-widget">
-							<h3>Quick Links</h3>
-							<ul>
-								<li><a href="{% url 'about' %}">About Us</a></li>
-								<li><a href="{% url 'services' %}">Procedures</a></li>
-								<!-- <li><a href="gallery.html">Gallery</a></li> -->
-								<li><a href="{% url 'contact' %}">Contact Us</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div class="footer-widget">
-							<h3>Contact Info</h3>
-							<ul>
-								<li><i class="fa fa-send" aria-hidden="true"></i> 3481 Rabana Place, 2090</li>
-								<li><i class="fa fa-phone" aria-hidden="true"></i> +880 17980XXXXX</li>
-								<li><i class="fa fa-envelope-o" aria-hidden="true"></i> info@example.com</li>
-								<li><i class="fa fa-fax" aria-hidden="true"></i> Fax : 02 9635 0247</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div class="footer-widget">
-							<h3>Business hour</h3>
-							<ul class="bussiness-hour">
-								<li>Monday-Friday: <span class="pull-right">9am - 5pm.</span></li>
-								<li>Saturday: <span class="pull-right">10am - 2pm.</span></li>
-								<li>Sunday: <span class="pull-right">Closed.</span></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="footer-bottom">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-12 col-md-6">
-						<div class="copyright">
-							<p>Copyright &copy; 2018. All rights reserved.</p>
-						</div>
-					</div>
-					<div class="col-sm-12 col-md-6">
-						<ul class="social-icons pull-right">
-							<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
-	<!-- end footer -->
-	
-	<!-- Bact to top -->
-	<div class="back-top">
-		<a href="#"><i class="fa fa-angle-up"></i></a>
-	</div>
-	
 	<!-- Start Video Modal -->
 	<div class="modal fade modal-vcenter" id="video-modal" role="dialog">
         <div class="modal-dialog modal-lg" role="document">
@@ -550,25 +395,4 @@
             </div>
         </div>
     </div>
-	
-    <!-- jQuery -->
-    <script src="/static/js/jquery-3.3.1.min.js"></script>
-	<script src="/static/js/popper.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/jquery.counterup.min.js"></script>
-    <script src="/static/js/waypoints.min.js"></script>
-    <script src="/static/js/jquery.easing.min.js"></script>
-	<script src="/static/js/wow.js"></script>
-	<script src="/static/js/owl.carousel.min.js"></script>
-	<script src="/static/js/venobox.min.js"></script>
-	<script src="/static/js/SmoothScroll.js"></script>
-	<script src="/static/js/tilt.jquery.js"></script>
-	<script src="/static/js/bootstrap-timepicker.min.js"></script>
-	<script src="/static/js/bootstrap-datepicker.js"></script>
-	<script src="/static/js/chosen.jquery.js"></script>
-	<script src="/static/mail/js/form-validator.min.js"></script>
-	<script src="/static/mail/js/contact-form-script.js"></script>
-    <script src="/static/js/script.js"></script>
-	
-</body>
-</html>
+	{% endblock %}
